update to image references

--- a/frontend/assets/stylesheets/layout/_homeslice.scss
+++ b/frontend/assets/stylesheets/layout/_homeslice.scss
@@ -34,7 +34,7 @@
     }
 
     &.home-slice--slice-four:after {
-        background-image: url(/assets/images/homepage/new/guardian_space002.png);
+        background-image: url(/assets/images/homepage/new/guardian_space002.jpg);
     }
 
     .home-slice__inner {
