--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -80,11 +80,11 @@ county: Option[String], userCountry: Option[String])
             @subdivisionSelect(Countries.Canada.states.toList, "countyOrState", "provence", true)
 
             <div class="form-field js-county-section">
-                <label class="label" for="county-@(formType)">County</label>
+                <label class="label" for="county-or-state-@(formType)">County</label>
                 <input type="text"
                        name="@(formType).countyOrState"
                        value="@county"
-                       id="county-@(formType)"
+                       id="county-or-state-@(formType)"
                        class="text-input text-input--block js-county-state"/>
             </div>
         </div>
