--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -532,4 +532,14 @@ div.event {
             }
         }
     }
+
+    &.event-item--blank {
+        display: none;
+        @include mq(tablet) {
+            display: block;
+        }
+        *:hover, &:hover {
+            background-color: $c-neutral7;
+        }
+    }
 }
