About us responsive styling

--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("About", isBrochure = true, containerPadding = false, htmlClass = "about-membership about-bg") {
+@main("About", isBrochure = true, containerPadding = false, htmlClass = "about-membership") {
 
     <div class="home-slice home-slice--epic u-cf">
         <div class="home-slice__inner u-cf">
