fix up sold out sign on event list items

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -162,10 +162,6 @@ div.event {
     color: $white;
 }
 
-.event-status--sold-out {
-    background-color: $mem-brandOrange;
-}
-
 .js-off .booking-dates {
     display: none;
 }
@@ -355,6 +351,17 @@ div.event {
             @include rem((
                 margin-bottom: $gs-baseline
             ));
+            position: relative;
+        }
+        .event-status--sold-out {
+            display: inline-block;
+            color: $white;
+            background-color: $mem-live-accent;
+            @include fs-data(2);
+            position: relative;
+            top: -3px;
+            padding: 1px 3px;
+            margin-left: 4px;
         }
         .event-item__time {
             @include fs-data(4);
