--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -7,9 +7,6 @@
 <li class="event-item @if(!isHero){events-list__item} @if(isHero){event-item--hero}">
             <div class="event-item__media">
                 <a href="/event/@event.id">
-                    @if(event.getStatus == SoldOut){
-                        <span class="event-status event-status--sold-out">Sold Out</span>
-                    }
                     <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.png" data-alt="Please upload an event image"></div>
                 </a>
             </div>@*
@@ -20,6 +17,9 @@
                 <a href="/event/@event.id">
                     <h2 class="event-item__title">
                         @event.name.text
+                        @if(event.getStatus == SoldOut){
+                            <span class="event-status--sold-out">Sold Out</span>
+                        }
                     </h2>
 
                     <div class="event-item__time">@event.start.pretty</div>
