Swap final icons and made comments amends

--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -8,53 +8,53 @@
                 <h1 class="home-slice__headline">About <br/>Membership</h1>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">Guardian membership bring together diverse, progressive minds, journalistic skills and the best of what others create to give you a richer understanding of the world and the opportunity of shaping it.</p> 
+                <p class="home-slice__copy">Guardian Membership brings together diverse, progressive minds, journalistic skills and the best of what others create to give you a richer understanding of the world and the opportunity to shape it.</p> 
                 <p class="home-slice__copy">Join now as a Founding Partner or Patron and guarantee that the price you pay today will never rise.</p>
                 <a class="action action--join" href="/join">Join today</a>
             </div>
         </div>
     </div>
 
-    <div class="benefits-container">
+    <div class="benefits-container u-cf">
         <h2 class="about-block-title">what's included</h2>
-        <ul class="benefits__list u-unstyled">
+        <ul class="benefits__list u-unstyled u-cf">
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-book_tickets"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-book_tickets"></i>
                 <span class="benefits__list--header">Book tickets</span>
                 <p>Book tickets to Guardian Live events</p>
             </li>
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-dig_digest"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-dig_digest"></i>
                 <span class="benefits__list--header">Digital Digest email</span>
                 <p>Receive weekly updates on the upcoming programme</p>
             </li>
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-video_highlights"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-video_highlights"></i>
                 <span class="benefits__list--header">Video highlights</span>
                 <p>Watch highlights of selected Guardian Live events</p>
             </li>
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-discount"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-discount"></i>
                 <span class="benefits__list--header">20% Discount</span>
                 <p>20% discount on Guardian Live tickets</p>
             </li>
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-plus_1_guest"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-plus_1_guest"></i>
                 <span class="benefits__list--header">+1 Guest</span>
                 <p>Bring a guest to Guardian Live with the same discount and priority booking advantages</p>
             </li>
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-live_stream"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-live_stream"></i>
                 <span class="benefits__list--header">Live stream events</span>
                 <p>Watch live streams of Flagship events</p>
             </li>
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-membership_card"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-membership_card"></i>
                 <span class="benefits__list--header">Membership card</span>
-                <p>Unlock additional experiences</p>
+                <p>Be part of the Guardian</p>
             </li>
             <li class="benefits__list--items">
-                <i class="icon-sprite icon-sprite-early_booking"></i>
+                <i class="icon-sprite icon-sprite__left icon-sprite-early_booking"></i>
                 <span class="benefits__list--header">Early Booking</span>
                 <p>Early booking for Partners and Patrons</p>
             </li>
@@ -68,7 +68,7 @@
                     <li class="join-today__join-box l-row__item">
                         <div class="join-today__join-box--header join-today__join-box--header--friends">Friend</div>
                         <div class="join-today__price">
-                        <div class="join-today__price--bold-free">£FREE</div>
+                        <div class="join-today__price--bold-free">Free</div>
                         </div>
                         <div class="join-today__teaser">
                             <p class="join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
@@ -80,9 +80,9 @@
                     <li class="join-today__join-box l-row__item">
                         <div class="join-today__join-box--header join-today__join-box--header--partner">Partner</div>
                         <div class="join-today__price l-row">
-                            <div class="join-today__price--bold l-row__item">£135/yr<span class="save-price">Save £45/yr</span></div>
+                            <div class="join-today__price--bold l-row__item">£135/year<span class="save-price">Save £45/year</span></div>
                             <div class="join-today__sep l-row__item"></div>
-                            <div class="join-today__price--bold l-row__item">£15/mo</div>
+                            <div class="join-today__price--bold l-row__item">£15/month</div>
                         </div>
                         <div class="join-today__teaser">
                             <p class="join-today__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
@@ -94,14 +94,14 @@
                     <li class="join-today__join-box l-row__item">
                         <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
                         <div class="join-today__price l-row">
-                            <div class="join-today__price--bold l-row__item">£540/yr<span class="save-price">Save £135/yr</span></div>
+                            <div class="join-today__price--bold l-row__item">£540/year<span class="save-price">Save £180/year</span></div>
                             <div class="join-today__sep l-row__item"></div>
-                            <div class="join-today__price--bold l-row__item">£60/mo</div>
+                            <div class="join-today__price--bold l-row__item">£60/month</div>
                         </div>
                         <div class="join-today__teaser">
                             <p class="join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
                             <a class="action action--secondary-button" href="/join/patron">
-                                <span class="action__text">Learn more about patron</span>
+                                <span class="action__text">Learn more about Patrons</span>
                             </a>
                         </div>
                     </li>
