--- a/frontend/app/views/fragments/nav.scala.html
+++ b/frontend/app/views/fragments/nav.scala.html
@@ -16,7 +16,7 @@
     <a href="/about" class="nav__link case--lower">About membership</a>
 </li>
 <li class="@navItemClass()">
-    <a href="/join/patron" class="nav__link case--lower">Patrons</a>
+    <a href="/patrons" class="nav__link case--lower">Patrons</a>
 </li>
 <li class="@navItemClass()">
     <a href="/join" class="nav__link case--lower">Pricing</a>
