--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -1,63 +1,171 @@
-@()
+@import views.support.Asset
+@import model.Benefits
 
-@main("Join | Patron") {
+@main("Patrons", isBrochure = true, htmlClass = "patron-page") {
 
-    <section class="content-section">
+    @* ===== Homepage hero ===== *@
 
-        @fragments.layout.sectionHeader("Purpose/Value")
-
-        <div class="action-inline-combo">
-            <h2 class="section-sub-headline u-text-hyphenate">Patron &#163;60</h2>
-            <a class="action action--inline-text action--join" href="/join/patron/enter-details">Join</a>
+    <div class="home-slice home-slice--epic u-cf">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h1 class="home-slice__headline">Become a patron</h1>
+            </div>
+            <div class="home-slice__copy-block">
+                <p class="home-slice__copy"></p>
+                <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
+                <a class="action action--join home-slice__action action--secondary-button" href="/about">Learn more</a>
+                <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
+                    connects you to the conversations that matter and introduces you to fellow members who share
+                    your interests.</p>
+                <a class="action action--join home-slice__action" href="/join">Join today</a>
+            </div>
         </div>
-    </section>
+    </div>
 
-    <section class="joiner-navigation hidden-mobile">
-        <ul class="u-unstyled">
-            <li class="joiner-navigation__tab inline-list__item">
-                <a href="#digital" class="joiner-navigation__btn">Digital</a>
-            </li>
-            <li class="joiner-navigation__tab inline-list__item">
-                <a href="#community" class="joiner-navigation__btn">Community</a>
-            </li>
-            <li class="joiner-navigation__tab inline-list__item">
-                <a href="#live" class="joiner-navigation__btn">Live</a>
-            </li>
-        </ul>
-    </section>
+    @* ===== Bring the Guardian to life ===== *@
 
-    <div class="separator"></div>
-    <section id="digital" class="joiner-section">
-        <h2 class="section-body-headline">Digital Benefits</h2>
-    </section>
+    <div class="home-slice u-cf home-slice--red home-slice--slice-two">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">Events that bring the Guardian to life</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <p class="home-slice__copy">Guardian Live is a programme of discussions, debates, interviews,
+                    keynote speeches and festivals.
+                </p>
+                <p class="home-slice__copy">Members can attend events that take the power of open journalism
+                    from print and digital into live experiences.
+                </p>
+                <a class="action action--secondary-button" href="/events">See our live events</a>
+            </div>
+        </div>
+    </div>
 
-    <section id="community" class="joiner-section">
-        <h2 class="section-body-headline">Community Benefits</h2>
-    </section>
+    @* ===== Fuels our journalism ===== *@
 
-    <section id="live" class="joiner-section joiner-section--no-border">
-        <h2 class="section-body-headline">Live Benefits</h2>
-    </section>
+    <div class="home-slice home-slice--content u-cf">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">Membership fuels our journalism</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <div class="home-slice__media">
+                    <img src="@Asset.at("images/homepage/new/alan_pulitzer_prize_speech.jpg")" alt="" />
+                </div>
+                <div class="home-slice__offset-copy">
+                    <blockquote class="home-slice__copy--quote">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
+                    <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
+                    <a class="action action--join" href="/join/patron">Start your journey as Patron</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <div class="separator"></div>
-    <section id="whats-included">
-        <h2>Whats Included</h2>
-        <ul class="benefits u-unstyled l-row l-row--items-4">
-            <li class="benefits-list l-row__item">
-                <span class="benefits-list__item">Digital</span>
-            </li>
-            <li class="benefits-list l-row__item">
-                <span class="benefits-list__item">Community</span>
-            </li>
-            <li class="benefits-list l-row__item">
-                <span class="benefits-list__item">Live</span>
-            </li>
-            <li class="benefits-list l-row__item">
-                <span class="benefits-list__item action-inline-combo action-inline-combo--nomargin">Patron £60
-                    <a class="action action--join" href="/join/patron/enter-details">Join</a>
-                </span>
-            </li>
-        </ul>
-    </section>
+    @* ===== Big ideas ===== *@
 
+    <div class="home-slice u-cf home-slice--green home-slice--slice-four">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">A home for big ideas</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <p class="home-slice__copy">
+                    In 2016, the Guardian will reopen the Midland Goods Shed at London’s King’s Cross to create a new kind of civic space.
+                </p>
+                <p class="home-slice__copy">
+                    The building will be a hub for big ideas and stimulating conversations. It will host events,
+                    activities and courses from Guardian Live and institutions we admire, as well as being the home of Guardian Membership.
+                </p>
+                <a class="action action--join" href="http://www.theguardian.com/membership">More about the building</a>
+                <a class="action action--secondary-button" href="http://www.theguardian.com/membership">Building progress blog</a>
+            </div>
+        </div>
+    </div>
+
+    @* ===== Founding Members ===== *@
+
+    <div class="home-slice home-slice--content u-cf">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">Founding members: join us at the start</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <div class="home-slice__media">
+                    <img src="@Asset.at("images/homepage/new/audience_discussion1.jpg")" alt="" />
+                </div>
+                <div class="home-slice__offset-copy">
+                    <p class="home-slice__copy">
+                        Guardian membership is launching in beta. We have ambitious plans, and new features will be added regularly. Guardian membership will grow into a vibrant, self-organising community of free-thinkers.
+                    </p>
+                    <p class="home-slice__copy">
+                        Help to build and shape this community by joining as a Founding Partner or Patron,
+                        with the guarantee that the price you pay today will never rise.</p>
+                    <a class="action action--join" href="/join" id="qa-join">Join today</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @* ===== Join Today ===== *@
+
+    <div class="home-slice home-slice--join-today">
+        <div class="home-slice__inner u-cf">
+            <h2 class="home-slice__headline">Join membership today</h2>
+            <ul class="l-row u-unstyled join-today__join-boxes">
+
+                @* === Friend === *@
+
+                <li class="join-today__join-box l-row__item">
+                    <div class="join-today__join-box--header join-today__join-box--header--friends">Friend</div>
+                    <div class="join-today__price">
+                        <div class="join-today__price--bold-free">FREE</div>
+                    </div>
+                    <div class="join-today__teaser">
+                        <p class="join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
+                        <a class="action action--secondary-button" href="/join">
+                            <span class="action__text">Learn more about membership</span>
+                        </a>
+                    </div>
+                </li>
+
+                @* === Partner === *@
+
+                <li class="join-today__join-box l-row__item">
+                    <div class="join-today__join-box--header join-today__join-box--header--partner">Partner</div>
+                    <div class="join-today__price l-row">
+                        <div class="join-today__price--bold l-row__item">£135/year<span class="save-price">Save
+                            £45/yr</span></div>
+                        <div class="join-today__sep l-row__item"></div>
+                        <div class="join-today__price--bold l-row__item">£15/month</div>
+                    </div>
+                    <div class="join-today__teaser">
+                        <p class="join-today__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
+                        <a class="action action--secondary-button" href="/join">
+                            <span class="action__text">Learn more about membership</span>
+                        </a>
+                    </div>
+                </li>
+
+                @* === Patron === *@
+
+                <li class="join-today__join-box l-row__item">
+                    <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
+                    <div class="join-today__price l-row">
+                        <div class="join-today__price--bold l-row__item">£540/year<span class="save-price">Save
+                            £135/yr</span></div>
+                        <div class="join-today__sep l-row__item"></div>
+                        <div class="join-today__price--bold l-row__item">£60/month</div>
+                    </div>
+                    <div class="join-today__teaser">
+                        <p class="join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
+                        <a class="action action--secondary-button" href="/join/patron">
+                            <span class="action__text">Learn more about Patrons</span>
+                        </a>
+                    </div>
+                </li>
+
+
+            </ul>
+        </div>
+    </div>
 }
