--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -4,107 +4,113 @@
 
     @fragments.layout.sectionHeader("Help")
 
-    <ul>
-    <li>What is Guardian membership?
+    <section id="what-is-membership"> 
+        <h2 class="section-body-headline">What is Guardian membership?</h2>
+        <p>Guardian membership is a community of people who share our belief that the open exchange of information, ideas and opinions can change the world for the better. By signing up and paying your subscription (at Partner and Patron level), you are helping us to bring those words to life by supporting our open and independent journalism. In return, you get access to events and experiences that are only available to our members.</p>
+    </section>
 
-    Guardian membership is a community of people who share our belief that the open exchange of information,
-    ideas and opinions can change the world for the better. By signing up and paying your subscription 
-    (at Partner and Patron level), you are helping us to bring those words to life by supporting our open,independent 
-     and liberal journalism. In return, you get access to events and experiences that are only available to our members.
-    </li>
+    <section id="why-join"> 
+        <h2 class="section-body-headline">Why should I join?</h2>
+        <p>Membership has a lot to offer, and by joining in this beta phase, you can help us build and shape Guardian Membership into one of the world’s largest communities of free thinkers. Benefits include access to our Guardian live events programme. The events range from lectures by some of the world’s foremost thinkers and talkers to exclusive screenings of the latest independent films; from Meet the journalist sessions at our offices in Kings Place to more intimate, bespoke events. Tickets are only available to Guardian members. If you want to support the Guardian and its journalism, and protect our dedication to keeping our website open and available to all, then signing up to Guardian membership and paying your subscription is a great way to do it too.</p>
+    </section>
 
-    <li>Why should I join? 
-        
-    If you want to support the Guardian and its journalism, then signing up to Guardian membership and paying your 
-    subscription is a great way to do it. But, even if you don’t feel strongly about what we do, membership has a 
-    lot to offer. Benefits include access to our Guardian Live events programme. The events range from lectures by 
-    some of the world’s foremost thinkers and talkers to exclusive screenings of the latest indy films; from Meet 
-    the Journalist sessions at our offices in Kings Place to more intimate, bespoke events. 
-    Tickets are only available to Guardian members.</li>
+    <section id="how-much-does-it-cost"> 
+        <h2 class="section-body-headline">How much does membership cost?</h2>
+        <p>The Friend tier of Guardian membership is free. Partners pay £15 per month or £135 per year if they pay in one go. For Patrons, the cost is £60 per month or £540 per year. If you choose the annual payment you get 3 months for free.</p>
+    </section>
 
-    <li>How much does membership costs?
-            
+    <section id="difference-between-tiers"> 
+        <h2 class="section-body-headline">What is the difference between a Friend, a Partner and a Patron?</h2>
+        <p>You can read a full description of each of our three membership tiers <a href=”https://membership.theguardian.com/join class=" u-underline">here</a>.</p>
+    </section>
 
-    The Friend tier of Guardian membership is free. Partners pay £15 per month or £135 per year 
-    if they pay in one go. For Patrons, the cost is £60 per month or £540 per year. </li>
+    <section id="why-sign-in-to-become-a-member"> 
+        <h2 class="section-body-headline">Why do I have to sign in to the Guardian to become a member?<h2>
+        <p>We ask you to sign in so that we know who you are and ensure that we apply the correct discounts and privileges when you’re buying your tickets to one of our events - Partners and Patrons get early booking and a 20% discount on tickets to all Guardian Live events.</p>
+    </section>
 
-    <li>What is the difference between a Friend, a Partner and a Patron? 
+    <section id="what-is-guardian-live"> 
+        <h2 class="section-body-headline">What is Guardian Live?</h2>
+        <p>Guardian Live is an events programme of discussions, debates, interviews and festivals that transform our journalism in print and online into live experiences. Tickets can only be booked by Guardian members.</p>
+    </section>
 
-    You can read a full description of each of our three membership tiers here [membership.theguardian.com/join].</li>
+    <section id="why-join"> 
+        <h2 class="can-I-buy-without-becoming-member">Can I buy a ticket to a Guardian Live event without becoming a member?</h2>
+        <p>No, you won’t be able to buy a ticket to a Guardian Live event if you are not a member. Access to these events is one of the benefits we offer to our members in return for their support. Our most basic tier of membership is free.</p>
+    </section>
 
-    <li>Why do I have to sign in to the Guardian to become a member?
+    <section id="can-I-buy-without-signing-in"> 
+        <h2 class="section-body-headline">Can I buy a ticket to an event without signing in?</h2>
+        <p>No, you are required to sign in before buying tickets for Guardian Live events.</p>
+    </section>
 
-    We ask you to sign in so that we know who you are and ensure that we apply the correct discounts and privileges 
-    when you’re buying your tickets to one of our events - Partners and Patrons get a 20% discount on tickets to all 
-    Guardian Live events. </li>
+    <section id="what-is-membership"> 
+        <h2 class="how-many-tickets-can-i-buy">How many Guardian Live tickets can I buy for each event?</h2>
+        <p>You can buy as many tickets as you want but partners and patrons are entitled to two tickets at a discount. After you’ve bought your two tickets at a discount you can come back and buy as many as you want at full price. We are working on improving this so that you can buy all your tickets in one go.</p>
+    </section>
 
+    <section id="what-events-are-upcoming"> 
+        <h2 class="section-body-headline">How will I know what Guardian Live events are coming up?</h2>
+        <p>Our <a href=”https://membership.theguardian.com/events class=" u-underline">events listing page</a> is updated regularly and when you sign up to membership, you will receive a weekly email newsletter containing information about our latest events.</p>
+    </section>
 
-    <li>What is Guardian Live?
+    <section id="I-do-not-want-weekly-email"> 
+        <h2 class="section-body-headline">What happens if I don't want to receive the weekly email?</h2>
+        <p>If you don’t want to receive our weekly email newsletter, tick the unsubscribe link at the bottom of the email.</p>
+    </section>
 
-    Guardian Live is an events programme of discussions, debates, interviews and festivals that transform our 
-    journalism in print and online into live experiences. Tickets can only be booked by Guardian members. <li>
+    <section id="under-18"> 
+        <h2 class="section-body-headline">I am under 18 - can I still be a member?</h2>
+        <p>No, you have to be 18 or over to sign up.</p>
+    </section>
 
-    <li>Can I buy a ticket to a Guardian Live event without becoming a member?
+    <section id="do-not-live-in-london"> 
+        <h2 class="section-body-headline">I don’t live in London - can I still be a member?</h2>
+        <p>Yes, Guardian membership is open to anyone living anywhere in the UK. Guardian Live events at launch will be taking place in London, Edinburgh, Manchester and Bristol, and we have plans to run future events across the UK.</p>
+    </section>
 
-    No, you won’t be able to buy a ticket to a Guardian Live event if you are not a member. Access to these events is one 
-    of the benefits we offer to our members in return for their support. Our most basic tier of membership is free.<li>
+    <section id="do-not-live-in-uk"> 
+        <h2 class="section-body-headline">I don’t live in the UK - can I still be a member?</h2>
+        <p>Yes, Guardian membership is open to anyone living anywhere in the world. And although our home is in London, we will be expanding membership and staging events for members in the USA and Australia within the next few years. </p>
+    </section>
 
-    <li>Can I buy a ticket to an event without signing in?
+    <section id="change-membership-tier"> 
+        <h2 class="section-body-headline">What happens if I want to change my membership tier?</h2>
+        <p>You can change your membership package online. Just go to your <a href=”https://profile.theguardian.com/membership/edit” class=" u-underline">Profile</a> page on the membership site and follow the instructions.</p>
+    </section>
 
-    No, you are required to sign in before buying tickets for Guardian Live events.<li>  
+    <section id="cancel-membership"> 
+        <h2 class="section-body-headline">What happens if I want to cancel my membership?</h2>
+        <p>You can cancel your membership after the first 12 months by following the instructions on this <a href=”https://membership.theguardian.com/tier/cancel class=" u-underline">page</a>. Your membership will run until the end of your current payment term.</p>
+    </section>
 
-    <li>How many Guardian Live tickets can I buy for each event?
+    <section id="have-a-question"> 
+        <h2 class="section-body-headline">I've got a question</h2>
+        <p>Please email <a href="mailto:membershipsupport@theguardian.com" class=" u-underline">membershipsupport@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours.</p>
+    </section>
 
-    You can buy as many tickets as you want but partners and patrons are entitled to two tickets at a discount. 
-    After you’ve bought your two tickets at a discount you can come back and buy as many as you want at full price. 
-    We are working on improving this flow so that you can buy all your tickets in one go.<li>
+    <section id="feedback-about-membership"> 
+        <h2 class="section-body-headline">I've got feedback about membership</h2>
+        <p>Please fill in the feedback form on the site <a href=”https://membership.theguardian.com/feedback” class=" u-underline">here</a>.</p>
+    </section>
 
-    <li>How will I know what Guardian Live events are coming up?
+    <section id="personal-data-protection"> 
+        <h2 class="section-body-headline">How do I know you are protecting my personal information?</h2>
+        <p>We will never use your information for any purpose without your permission. You can read more about our approach to data security in our privacy policy <a href=”http://www.theguardian.com/help/privacy-policy” class=" u-underline">here</a>.</p>
+    </section>
 
-    Our calendar of events [membership.theguardian.com/events] is updated regularly and when you sign up to membership, 
-    you will receive a weekly email newsletter containing information about our latest events.<li> 
+    <section id="terms-conditions-of-membership"> 
+        <h2 class="section-body-headline">What are the terms and conditions of membership?</h2>
+        <p>You can read our full set of terms and conditions <a href=”http://www.theguardian.com/help/terms-of-service” class=" u-underline">here</a>.</p>
+    </section>
 
-    <li>What happens if I don't want to receive the weekly email?
+    <section id="wheelchair-access-for-venue"> 
+        <h2 class="section-body-headline">How can I find out about disabled/wheelchair access for the venue?</h2>
+        <p>We only run events at venues that are accessible by wheelchair. You can indicate that you require accessibility information on the ticket booking form and we will contact you to go over the required access route before the event.</p>
+    </section>
 
-    If you don’t want to receive our weekly email newsletter, tick the unsubscribe link at the bottom of the email.<li> 
-
-    <li>I am under 18 - can I still be a member?
-
-    No, you have to be 18 or over to sign up.<li>
-
-    <li>I don’t live in London - can I still be a member?
-
-    Yes, Guardian membership is open to anyone living anywhere in the UK. Guardian Live events at launch will be 
-    taking place in London, Edinburgh, Manchester and Bristol, and we have plans to run future events across the UK.<li>  
-
-    <li>I don’t live in the UK - can I still be a member?
-
-    Yes, Guardian membership is open to anyone living anywhere in the world. And although our home is in London, 
-    we will be staging events for members in New York and Sydney within the next few years.<li> 
-
-    <li>What happens if I want to change my membership package?
-
-    You can change your membership package online. Just go to the My Account page 
-    [https://profile.theguardian.com/membership/edit] on the membership site and follow the instructions.<li> 
-
-    <li>What happens if I want to cancel my membership? 
-
-    You can cancel your membership after the first 12 months by following the instructions on this page 
-    [https://membership.theguardian.com/tier/cancel]. Your membership will run until the end of your current 
-    payment term. If you want to cancel sooner than that, you should call our customer service team on 0330 333 6898.<li>
-
-    <li>I've got a question
-
-    Please email membershipsupport@@theguardian.com with your question. We will get back to you within 24 hours.<li>
-
-    <li>How do I know you are protecting my personal information?
-
-    We will never use your information for any purpose without your permission. You can read more about our 
-    approach to data security in our privacy policy here [link].<li>
-
-    <li>What are the terms and conditions of membership?
-
-    You can read our full set of terms and conditions here [link].<li> 
-
-
+    <section id="retrospective-discount-on-event"> 
+        <h2 class="section-body-headline">I’ve already bought a ticket to an event. If I become a member can I get a retrospective discount?</h2>
+        <p>Unfortunately we can’t offer retrospective discounts.</p>
+    </section>
 }
