additional @ for mailto

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -86,7 +86,7 @@
 
     <section id="have-a-question"> 
         <h2 class="section-body-headline">I've got a question</h2>
-        <p>Please email <a href="mailto:membersupport@theguardian.com" class="u-underline">membersupport@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours.</p>
+        <p>Please email <a href="mailto:membersupport@@theguardian.com" class="u-underline">membersupport@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours.</p>
     </section>
 
     <section id="feedback-about-membership"> 
