Rewrite a lot of CSS for tiers

--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -19,6 +19,7 @@
 @import 'base/images';
 /* Utility
    ========================================================================== */
+@import 'utility/flexbox';
 @import 'utility/hidden';
 @import 'utility/js-warning';
 @import 'pages/browser-warning';
