--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -1,7 +1,9 @@
-@()
+@()(implicit token: play.filters.csrf.CSRF.Token)
 
 @import configuration.Config
 @import views.support.Asset
+@import com.gu.membership.salesforce.Tier
+@import helper._
 
 @promoWithImageBackground(title: String, imageBackground: String, promoClass: String, images: List[(String, String)])(content: Html) = {
     <div class="brochure-container-outer @imageBackground">
@@ -100,33 +102,10 @@
         <div class="brochure-container brochure-container--promo-seven">
             <div class="brochure-container__inner">
                 <h2 class="section-headline section-headline--with-margins">Join membership today</h2>
-                <div class="l-row">
-                    <div class="brochure-container__join-box">
-                        <div class="brochure-container__join-box--header brochure-container__join-box--header--friends">Friend</div>
-                        <div class="brochure-container__price">
-                        <div class="brochure-container__price--bold-free">£FREE</div>
-                        </div>
-                        <p class="brochure-container__teaser brochure-container__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
-                        <a class="action action--secondary-button" href="/join">Learn more about membership</a>
-                    </div>
-                    <div class="brochure-container__join-box">
-                        <div class="brochure-container__join-box--header brochure-container__join-box--header--partner">Partner</div>
-                        <div class="brochure-container__price l-row">
-                            <div class="brochure-container__price--bold">£135/yr<span class="save-price">Save £45/yr</span></div>
-                            <div class="brochure-container__price--bold">£15/mo</div>
-                        </div>
-                        <p class="brochure-container__teaser brochure-container__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
-                        <a class="action action--secondary-button" href="/join">Learn more about membership</a>
-                    </div>
-                    <div class="brochure-container__join-box">
-                        <div class="brochure-container__join-box--header brochure-container__join-box--header--patron">Patron</div>
-                        <div class="brochure-container__price l-row">
-                            <div class="brochure-container__price--bold">£540/yr<span class="save-price">Save £135/yr</span></div>
-                            <div class="brochure-container__price--bold">£60/mo</div>
-                        </div>
-                        <p class="brochure-container__teaser brochure-container__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
-                        <a class="action action--secondary-button" href="/join/patron">Learn more about patron</a>
-                    </div>
+                <div class="l-row package-list package-list--bordered">
+                    @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=false, mode="promo")
+                    @fragments.tier.benefits(currentTier=None, tier=Tier.Partner, showBenefitDetails=false, mode="promo")
+                    @fragments.tier.benefits(currentTier=None, tier=Tier.Patron, showBenefitDetails=false, mode="promo")
                 </div>
             </div>
         </div>
