--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -33,7 +33,7 @@
         @for(tier <- tierOpt) {
             <p>@Benefits.details(tier).leadin</p>
 
-            <ul class="package__list-element">
+            <ul class="package__list-benefits-element">
             @for((header, body) <- Benefits.details(tier).list) {
                 <li class="benefits-title">@header</li>
                 <li class="benefits-copy">@body</li>
