--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -1,7 +1,8 @@
-@(currentTier: com.gu.membership.salesforce.Tier.Tier)
+@(currentTier: com.gu.membership.salesforce.Tier.Tier)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import configuration.Config
 @import com.gu.membership.salesforce.Tier
+@import helper._
 
 @main("Change Tier") {
 
@@ -18,7 +19,7 @@
                 <section class="package-list">
 
                     @for(tier <- Tier.values.toSeq.sorted){
-                        @if(tier >= Tier.Friend){ @fragments.tier.benefits(currentTier, tier) }
+                        @if(tier >= Tier.Friend){ @fragments.tier.benefits(Some(currentTier), tier) }
                     }
 
                 </section>
