--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -56,7 +56,7 @@
                 <div class="home-slice__offset-copy">
                     <blockquote class="home-slice__copy--quote">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
                     <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
-                    <a class="action action--join" href="/join/patron">Start your journey as Patron</a>
+                    <a class="action action--join" href="/patrons">Start your journey as Patron</a>
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
                 <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--friends">Friend</div>
                     <div class="join-today__price">
-                    <div class="join-today__price--bold-free">FREE</div>
+                    <div class="join-today__price--bold-free">Free</div>
                     </div>
                     <div class="join-today__teaser">
                         <p class="join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="join-today__teaser">
                         <p class="join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
-                        <a class="action action--secondary-button" href="/join/patron">
+                        <a class="action action--secondary-button" href="/patrons">
                             <span class="action__text">Learn more about Patrons</span>
                         </a>
                     </div>
