--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -8,7 +8,7 @@
                 <h1 class="home-slice__headline">About <br/>Membership</h1>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">Guardian Membership brings together diverse, progressive minds, journalistic skills and the best of what others create to give you a richer understanding of the world and the opportunity to shape it.</p> 
+                <p class="home-slice__copy">Guardian Membership brings together diverse, progressive minds, journalistic skills and the best of what others create to give you a richer understanding of the world and the opportunity to shape it.</p>
                 <p class="home-slice__copy">Join now as a Founding Partner or Patron and guarantee that the price you pay today will never rise.</p>
                 <a class="action action--join" href="/join">Join today</a>
             </div>
@@ -100,7 +100,7 @@
                         </div>
                         <div class="join-today__teaser">
                             <p class="join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
-                            <a class="action action--secondary-button" href="/join/patron">
+                            <a class="action action--secondary-button" href="/patrons">
                                 <span class="action__text">Learn more about Patrons</span>
                             </a>
                         </div>
