--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -108,7 +108,7 @@
                 <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--friends">Friend</div>
                     <div class="join-today__price">
-                        <div class="join-today__price--bold-free">FREE</div>
+                        <div class="join-today__price--bold-free">Free</div>
                     </div>
                     <div class="join-today__teaser">
                         <p class="join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
