Fix h2 close tag

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -25,7 +25,7 @@
     </section>
 
     <section id="why-sign-in-to-become-a-member"> 
-        <h2 class="section-body-headline">Why do I have to sign in to the Guardian to become a member?<h2>
+        <h2 class="section-body-headline">Why do I have to sign in to the Guardian to become a member?</h2>
         <p>We ask you to sign in so that we know who you are and ensure that we apply the correct discounts and privileges when you’re buying your tickets to one of our events - Partners and Patrons get early booking and a 20% discount on tickets to all Guardian Live events.</p>
     </section>
 
